# canpi-config

./: .env  .gitignore  Cargo.toml  README.md
src/: lib.rs
static/: canpi-config-defn.json  canpi-config-schema.json  config-defn-schema.json
tests/: bad-example-config-defn.json  canpi-config-bad-defn.json  read_cfg_file_test.rs  validate_cfg_schema_test.rs  write_attribute_test.rs
