[package]
name = "canpi-config"
version = "0.1.0"
authors = ["Mark Thornber <mark.thornber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Data serialisation library
serde = { version = "1", features = ["derive"] }
