[package]
name = "canpi-config"
version = "0.1.3"
authors = ["Mark Thornber <mark.thornber@merg.org.uk>"]
edition = "2018"

[lib]
name = "canpi_config"
path = "src/lib.rs"
test = true
crate-type = ["lib"]
required-features = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_dir = "0.7.2"
output = "*"
# Data serialisation library
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.72"
serde_test = "1.0.130"
# JSON libraries
jsonschema = "0.16.0"
schemars = "0.8.10"
# Environment variable access libraries
dotenv = "0.15.0"
# .ini file library
#configparser = "3.0.0"
rust-ini = "0.17.0"
# Error handling
thiserror = "1.0.30"
anyhow = "1.0.61"
# Create file backup
backitup = "0.1.0"

